--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <div id="register">
     Enter a name to register:<br />
     <input type="text" id="yourname" class="form-control" placeholder="Your Name">
-    <button type="button" id="name-btn" >Set Name</button>
+    <button type="button" id="name-btn" >Join</button>
     </div>
-    <span id="user"></span>
-    <span id="members"></span>
+    <span id="status">
+      <span id="user"></span>
+      <button type="button" id="leave" >Leave</button><br />
+      <span id="members"></span>
+    </span>
     <p>
 
 
